# threat-hunting-rag

./: .dockerignore  .env.development  .env.example  .flake8  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  TASK_STATUS.md  app.py  docker-compose.yml  environment.yml  generate_simple_dataset.py  main.py  pip.conf  plan.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  startup.sh  task.txt
data/: README.md  emails.csv
diagrams/: README.md  Threat Hunting RAG System.pptx  architecture.mmd  architecture_simple.mmd
docs/: USAGE_EXAMPLES.md  architecture.md  cache.md  interfaces.md  performance.md  scoring.md  security.md
examples/: implement_queries.py  interactive_queries_report_20251116_134958.md  interactive_queries_report_20251116_140051.md  interactive_queries_report_20251116_140943.md  interactive_queries_report_20251116_141509.md  interactive_queries_report_20251116_141847.md  interactive_queries_report_20251119_115342.md  interactive_queries_report_20251119_115628.md  interactive_queries_summary_20251116_140943.json  interactive_queries_summary_20251116_141509.json  interactive_queries_summary_20251116_141847.json  interactive_queries_summary_20251119_115342.json  json_query_output.json  queries_examples.md  run_interactive_queries.py  sample_outputs_latest.json  sample_outputs_real.json
scripts/: bootstrap.sh  check_index.py  clean_repo.sh  rebuild_index.py  regenerate_all.py  run_comprehensive_tests.py
src/: README.md  __init__.py  cli.py  config.py  generate_dataset.py  index_builder.py  rag_pipeline.py  retriever.py  schemas.py
(+89 files in other folders)
